2001-09-13 Terry Biggs <tbiggs@users.sourceforge.net>

	*  gs will now display book introductions for thml commentaries
	   that have them.


2001-09-10 Terry Biggs <tbiggs@users.sourceforge.net>

	*  fixed bug that cause gs to crash when selecting text
	   in interlinear page
	

2001-09-04 Terry Biggs <tbiggs@users.sourceforge.net>

	*  Changed Font= and Font size= for module conf files
	   to GSFont= and GSFont size= to avoid conflicts since we
	   use different froms.
	* Fixed not remembered morph tags state bug
	

2001-08-23 Terry Biggs <tbiggs@users.sourceforge.net>

	* added expand all and collapse all items to the 
	   bookmark tree's popup menu
	

2001-08-22 Terry Biggs <tbiggs@users.sourceforge.net>

	* added about.png
	

2001-08-21Terry Biggs <tbiggs@users.sourceforge.net>

	* release  0.5.2
	* added files gs_mainmenu_cb.*
	* renamed callback.* to gs_gui_cb.*


2001-08-18 Terry Biggs <tbiggs@users.sourceforge.net>

	* Added notebook to verselist group of shortcut bar
	  with three pages - verse list, search results and viewer
	* Changed gs_display.* files to sw_display.*
	* Changed the names of the filters:
		gs_gbfhtml.* to gbfhtmlhref.*
		gs_thmlhtml.* to thmlhtmlhref.*
	* removed gs_search.* and ga_search_cb.*
	* removed display.*

2001-08-18 Terry Biggs <tbiggs@users.sourceforge.net>

	* added unlock module dialog
	* added support for module font size and font name


2001-08-16 Terry Biggs <tbiggs@users.sourceforge.net>

	* release 0.5.1a
	* fix gconf_init bug
	* fix to work with gal-0.10.99.2 and under to 0.4.99
	* view text dialog is now resizeable
	* interlinear verses are now in an html table 


2001-08-13 Terry Biggs <tbiggs@users.sourceforge.net>

	* change to release 0.5.0
	* requires sword-1.5.2
	* changed main menu item 'Bookmarks' to 'Quickmarks' to
	   avoid confusion with shortcut bar bookmarks
	* added choice of Lexicon to be used when strongs number
	  is clicked to preferences dialog